--- a/Views/create-post.handlebars
+++ b/Views/create-post.handlebars
@@ -1,6 +1,6 @@
 
 <section>
-    <a href="/dashboard" class="is-pulled-right"> &larr; back to dashboard</a>
+    <a href="/dash" class="is-pulled-right"> &larr; back to dash</a>
   <h2 class="title">create new blog post</h2><hr>
 
   <form class="new-post-form">
