--- a/Views/edit-post.handlebars
+++ b/Views/edit-post.handlebars
@@ -1,5 +1,5 @@
 <article>
-  <a href="/dash" class="is-pulled-right"> &larr; back to dashboard</a>
+  <a href="/dash" class="is-pulled-right"> &larr; back to dash</a>
   <h2 class="title mt-5">edit post</h2><hr>
   <form class="edit-post-form">
     <div>
@@ -11,7 +11,7 @@
       <input class="textarea" name="post-content" type="text" value="{{post.post_content}}" />
     </div>
     <div class="is-pulled-right">
-       created by you on {{format_date post.created_at}}
+       created by you on {{format_date}}
       |
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
