rerouting and conventions

--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -15,8 +15,8 @@
         <nav class="navbar mt-2">
             {{#if loggedIn}}
             <a href="/" class="navbar-item is-hoverable pt-1">homepage</a>
-            <a href="/dash" class="navbar-item is-hoverable pt-1">dash</a>
-            <a href="/dash/create/" class="navbar-item is-hoverable pt-1 mr-4">create post</a>
+            <a href="/dashboard" class="navbar-item is-hoverable pt-1">dash</a>
+            <a href="/dashboard/create" class="navbar-item is-hoverable pt-1 mr-4">create post</a>
             <button id="logout" class="button is-danger">logout</button>
             {{else}}
             <a href="/" class="navbar-item is-hoverable pt-1">homepage</a>
@@ -33,8 +33,8 @@
         <div class="row-is-full content has-text-centered">
             <p>
             <a href="/">homepage</a>{{#if loggedIn}} | 
-            <a href="/dash/">dash</a> | 
-            <a href="/dash/create/">create new post</a>
+            <a href="/dashboard">dash</a> | 
+            {{!-- <a href="/create-post">create new post</a> --}}
             {{else}}
              | <a href="/login/">login</a>
             {{/if}}
