--- a/Views/edit-post.handlebars
+++ b/Views/edit-post.handlebars
@@ -1,5 +1,5 @@
 <article>
-  <a href="/dash" class="is-pulled-right"> &larr; back to dash</a>
+  <a href="/dashboard" class="is-pulled-right"> &larr; back to dashboard</a>
   <h2 class="title mt-5">edit post</h2><hr>
   <form class="edit-post-form">
     <div>
