--- a/Views/initiate-post.handlebars
+++ b/Views/initiate-post.handlebars
@@ -1,5 +1,5 @@
 <section>
-    <a href="/dash" class="is-pulled-right"> &larr; back to dash</a>
+    <a href="/dashboard" class="is-pulled-right"> &larr; back to dashboard</a>
   <h2 class="title">create new blog post</h2><hr>
 
   <form class="new-post-form">
